[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61"]

[project]
authors = [{ name = "stryngs", email = "127.0.0.1@nowhere.com" }]
dependencies = ["geometry-msgs",
                "libStreamer",
                "rclpy",
                "sensor-msgs",
                "std-msgs"]
description = "Handler for capturing a UDP stream"
license = "GPL-2.0-only"
license-files = ["LICENSE"]
name = "libStreamer_udp"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.6"
